Fixed photos issue of photos not fitting inside desktop screen

--- a/src/app/photo/photo.component.scss
+++ b/src/app/photo/photo.component.scss
@@ -16,9 +16,9 @@ mat-tab {
 }
 
 .image {
-    width: 90%;
+    width: 70%;
     height: auto;
-    margin: 1em auto;
+    margin: 2em auto;
     position: relative;
     display: block;
     border-radius: 0.2em;
